# sol-dap

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/notepads/sol-dap/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: sol-dap.md
.zed/: debug.json  settings.json  tasks.json
contrib/: pre-commit
contrib/zed-adapter/: solidity.rs
src/: config.rs  evaluate.rs  expr_parser.rs  handler.rs  launch.rs  lib.rs  main.rs  session.rs  source_map.rs  variables.rs
tests/: integration.rs
tests/fixtures/sample-project/: foundry.toml
tests/fixtures/sample-project/cache/: solidity-files-cache.json
tests/fixtures/sample-project/src/: Vault.sol
tests/fixtures/sample-project/test/: Counter.t.sol  Vault.t.sol
zed-ext/: Cargo.toml  extension.toml  extension.wasm
zed-ext/contrib/: runnables.scm
zed-ext/debug_adapter_schemas/: sol-dap.json
zed-ext/src/: lib.rs
